fix search bar wrap

--- a/www.foia.gov/_sass/modules/_typeahead.scss
+++ b/www.foia.gov/_sass/modules/_typeahead.scss
@@ -1,6 +1,6 @@
 .twitter-typeahead {
   max-width: 46rem; // Match the max-width on WDS inputs
-  width: 100%;
+  width: 80%;
 
   .tt-menu {
     background-color: $color-white;
